--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,3 +4,7 @@
   href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap"
   rel="stylesheet"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&display=swap"
+  rel="stylesheet"
+/>
