--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,6 +5,6 @@
   rel="stylesheet"
 />
 <link
-  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
   rel="stylesheet"
 />
